<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/cont_scroll"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode"
                app:layout_constraintBottom_toTopOf="@+id/mode_group"
                app:layout_constraintStart_toStartOf="@+id/mode_group" />

            <RadioGroup
                android:id="@+id/mode_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/title_opentext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <RadioButton
                    android:id="@+id/encode_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/encode" />

                <RadioButton
                    android:id="@+id/decode_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/decode" />
            </RadioGroup>


            <EditText
                android:id="@+id/opentext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="Введите текст"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/title_key"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/title_opentext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Opentext"
                app:layout_constraintBottom_toTopOf="@+id/opentext"
                app:layout_constraintStart_toStartOf="@+id/opentext" />

            <TextView
                android:id="@+id/title_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key"
                app:flow_horizontalAlign="start"
                app:layout_constraintBottom_toTopOf="@id/key"
                app:layout_constraintStart_toStartOf="@+id/key" />

            <EditText
                android:id="@+id/key"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="Введите ключ"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@id/title_gamma"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/title_gamma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_gamma"
                app:flow_horizontalAlign="start"
                app:layout_constraintBottom_toTopOf="@id/gamma_spinner"
                app:layout_constraintStart_toStartOf="@+id/gamma_spinner" />

            <Spinner
                android:id="@+id/gamma_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:tooltipText="@string/mode"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                tools:listitem="@android:layout/simple_list_item_1" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <Button
        android:id="@+id/execute_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/execute"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="342dp"
        android:layout_marginTop="1dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cont_scroll"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titile_ciphertext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ciphertext" />

            <TextView
                android:id="@+id/cipher_text"
                android:layout_width="match_parent"
                android:textSize="32dp"
                android:textColor="@color/black"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content"
                android:hint="..." />

            <TextView
                android:id="@+id/titile_gammatext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gamma_title" />

            <TextView
                android:id="@+id/gamma"
                android:layout_width="match_parent"
                android:textSize="32dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:hint="..." />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>